2015-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/widget.c (MagickXConfirmWidget): Silence Coverity 10089
	"Copy-paste error".  This is an amazing find by Coverity.

	* magick/xwindow.c (MagickXImportImage): Silence Coverity 10207
	"Array compared against 0".

	* magick/quantize.c (GrayscalePseudoClassImage): Silence Coverity
	10256 "Wrong sizeof argument".

	* coders/tiff.c (ReadTIFFImage): Fix Coverity 44747 and 44748
	"Extra sizeof expression".

2015-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Magick++/Include.h (Magick): Fix compilation with
	'clang' under Linux.  Build was broken yesterday.

	* coders/tiff.c (QuantumTransferMode): Fix reading Old JPEG and
	YCbCr sample images from libtiff pics-3.8.0.tar.gz image file
	collection.  There was a regression for YCbCr added in last
	release.

2015-03-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix Coverity 44726 "Division or
	modulo by float zero".  I don't think that this can actually
	happen due to prior checks.

	* magick/xwindow.c (MagickXMakeWindow): Silence Coverity 10281
	"Copy into fixed size buffer".

	* coders/pdf.c (ReadPDFImage): Silence Coverity 10241 "Copy into
	fixed size buffer".

	* magick/type.c (ReadTypeConfigureFile): Silence Coverity 10242
	"Copy into fixed size buffer".

	* magick/utility.c (GetPathComponent): Silence Coverity 10263
	"Copy into fixed size buffer".

	* coders/txt.c (ReadTXTImage): Silence Coverity 10287 "Copy into
	fixed size buffer".

	* coders/ps.c (WritePSImage): Silence Coverity 10289 "Copy into
	fixed size buffer".

	* magick/delegate.c (ReadConfigureFile): Silence Coverity 10297
	"Copy into fixed size buffer".

	* magick/log.c (ReadLogConfigureFile): Silence Coverity 10300
	"Copy into fixed size buffer".

	* coders/ps3.c (WritePS3Image): Silence Coverity 10303 "Copy into
	fixed size buffer".

	* coders/pdf.c (WritePDFImage): Silence Coverity 10304 "Copy into
	fixed size buffer".
