@@ -38,6 +38,8 @@
 <p>2015-03-17  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/command.c (ProcessBatchOptions): Silence Coverity 10080
+&quot;Buffer not null terminated&quot;.</li>
 <li>magick/widget.c (MagickXConfirmWidget): Silence Coverity 10089
 &quot;Copy-paste error&quot;.  This is an amazing find by Coverity.</li>
 <li>magick/xwindow.c (MagickXImportImage): Silence Coverity 10207
